--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 EditorStartupMap=/Game/02_Player/02_Level.02_Level
+GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
