--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,6 +86,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fist",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +ActionMappings=(ActionName="TwoHand",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Warp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
++ActionMappings=(ActionName="Around",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
