--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -90,6 +90,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fireball",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +ActionMappings=(ActionName="Bow",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="Guard",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="SubAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
